# iudx-analytics-app

./: .gitignore  0001-Version-rollback-from-0.21.0-to-0.20.2.patch  README.md
apps/aqm/adaptors/: README.md  pune.py  vadodara.py  varanasi.py
apps/aqm/druid/: pune-aqm.json  vadodara-aqm.json  varanasi-aqm.json
apps/aqm/kafka/: topics.json
apps/aqm/superset/: import_app.sh  pune-aqm-dashboard.json  pune-aqm-datasource.yaml  sensor_grouped_average.yaml  vadodara-aqm-dashboard.json  vadodara-aqm-datasource.yaml  varanasi-aqm-dashboard.json  varanasi-aqm-datasource.yaml
apps/jupyter-notebooks/: pune-flood-sensors.ipynb  readme.md
configs/: README.md  backend_config.sh  config-example.json
docs/diagrams/: Architecture
jupyter-notebooks/: Pune-WS.ipynb  airQualityMonitoring.ipynb  readme.md
scripts/: create_snapshot.sh  setup_app.sh  setup_db.sh  setup_ingestion.sh  setup_network.sh  stop_app.sh  stop_db.sh  stop_ingestion.sh
scripts/configs/: README.md  config.json
setup/apps/: Dockerfile  docker-compose.yml
setup/apps/adaptor/: pyproject.toml
setup/apps/adaptor/adaptor/: Adaptor.py
setup/apps/adaptor/tests/: test_adaptor.py
setup/druid/: .gitignore  broker.env  coord.env  docker-compose-create.yml  docker-compose.yml  environment  historical.env  mm.env  router.env
setup/images/: Dockerfile  Dockerfile.adaptors
setup/kafka/: Dockerfile  docker-compose.yml
setup/miniobackup/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
setup/superset/: Dockerfile  docker-compose.yml  env
setup/zookeeper/: docker-compose.yml
(+31 files in other folders)
