[tool.poetry]
name = "adaptor"
version = "0.1.0"
description = ""
authors = ["rraks <rakshitadmar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
confluent_kafka = "^1.6.1"
pika = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
